--- a/public/Nitrocid.Base/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/arb-T.json
@@ -561,10 +561,6 @@
       "text": "خروج"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "الخيار المحدد {0} غير صالح."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "تحقق من وجود تحديثات عند بدء التشغيل"
     },
@@ -917,10 +913,6 @@
       "text": "قد لا يكون رقم السطر المحدد أكبر من رقم سطر الملف الأخير."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "اضغط على أي مفتاح للعودة."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0} ، تم الإنشاء في {1} {2} ، تم التعديل في {3} {4}"
     },
@@ -1255,10 +1247,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "تم حذف الحرف."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "مرحبًا بك في الإعدادات!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1803,14 +1791,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "الاستعلام عن كلمة في سطر محدد أو كل الأسطر باستخدام التعبيرات العادية"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "اكتب ما تريد البحث عنه."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "لم يتم العثور على شيء. تأكد من كتابة الإعداد بشكل صحيح."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4109,84 +4089,12 @@
       "text": "لم يتم العثور على نوع الإعدادات."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "ابحث عن خيار"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "يتيح لك البحث بسهولة عن إدخال الإعدادات باستخدام عنوانه أو قيمته."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "احفظ التغييرات"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "يحفظ تغييرات تكوين kernel في ملف التكوين الموجود في مجلد بيانات التطبيق."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "حفظ الإعدادات باسم"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "يحفظ تغييرات تكوين kernel الخاصة بك في ملف التكوين الموجود في المجلد المحدد."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "تحميل الإعدادات من"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "يقوم بتحميل تكوين kernel من ملف التكوين المحدد."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "إعادة تحميل الإعدادات"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "يعيد تحميل تكوين النواة لأية تغييرات خارجية"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "التحقق من وجود تحديثات النظام"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "معلومات النظام"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "أنت الآن في الصفحة المقصودة لإعدادات {0}. حدد قسمًا أو خيارًا للبدء. اعتمادًا على الإعدادات التي قمت بتغييرها، قد تحتاج إلى إعادة تشغيل kernel."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "جارٍ تحميل القسم..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "واحد أو أكثر من الإعدادات التالية الموجودة في هذا القسم غير مدعومة في نظامك الأساسي:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "قسم غير صالح. يرجى العودة."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "مفتاح غير صالح. يرجى العودة."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "جارٍ البحث عن الإعدادات..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "تم العثور على هذه الإعدادات. رجاءا اختر واحدة."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "فشل في العثور على الإعداد المطلوب."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6589,14 +6497,6 @@
       "text": "التاريخ والوقت البسيط في منتصف الشاشة."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "ترحيل التكوين القديم"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "ترحيل بعض التكوينات القديمة من الإصدارات الأقدم للنواة"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "ربما لم يتم إكمال ترحيل التكوين بنجاح. إذا كنت متأكدًا من أن ملفات التكوين الخاصة بك صالحة، فتحقق من سجلات التصحيح للحصول على مزيد من المعلومات."
     },
@@ -6887,10 +6787,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "سيتم إيقاف تشغيل النواة الموجودة في المثيل البعيد"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "يستخدم نمط الإعدادات القديمة"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7379,18 +7275,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "لم يتم العثور على إدخالات الإعدادات."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "التحقق من تحديثات النظام (يتطلب اتصالاً نشطًا بالإنترنت)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "يعرض لك معلومات النظام الأساسية (المزيد من المعلومات متوفرة في الأمر \"sysinfo\")."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "لا يمكن الحصول على القسم"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8937,14 +8821,6 @@
       "text": "اختيار التكوين."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "تم إيقاف تطبيق الإعدادات القديم وسيتم إزالته في إصدار مستقبلي."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "يُطلب منك اختيار نسخة تكوين."
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "حدد نسخة تكوين للتبديل إليها."
     },
@@ -9223,6 +9099,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "حدث خطأ في Chatbot AI. يُرجى التأكد من اتصالك بالإنترنت، وأن مفتاح API الخاص بك صالح، وأنك لا تتجاوز حصة API المخصصة لك."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "يختار شاشة توقف عشوائية"
     }
   ]
 }
