--- a/public/Nitrocid.Base/Resources/Languages/arb.json
+++ b/public/Nitrocid.Base/Resources/Languages/arb.json
@@ -561,10 +561,6 @@
       "text": "khuruj"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "alkhiar almuhadad {0} ghayr salihi."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "tahaqaq min wujud tahdithat eind bad' altashghil"
     },
@@ -917,10 +913,6 @@
       "text": "qad la yakun raqm alsatar almuhadad 'akbar min raqm satar almilafi al'akhir."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "adghut ealaa 'ayi miftah lileawdat."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0} , tama al'iinsha' fi {1} {2} , tama altaedil fi {3} {4}"
     },
@@ -1255,10 +1247,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "tama hadhf alhirafa."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "mrhbana bik fi al'iiedadati!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1803,14 +1791,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "alaistielam ean kalimat fi satr muhadad 'aw kuli al'astur biaistikhdam altaebirat aleadia"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "aiktub ma turid albahth eanhu."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "lam yatima aleuthur ealaa shay'i. ta'akad min kitabat al'iiedad bishakl sahihin."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4109,84 +4089,12 @@
       "text": "lm ītm al-ʿṯūr ʿli nūʿ al-iʿdādāt."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "abḥṯ ʿn ẖīār"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "ītīḥ lk al-bḥṯ bshūlẗ ʿn idẖāl al-iʿdādāt bāstẖdām ʿnwānh aū qīmth."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "aḥfẓ al-tġyirāt"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "īḥfẓ tġyirāt tkwyn kernel fī mlf al-tkwyn al-mūǧūd fī mǧld bīānāt al-tṭbīq."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "ḥfẓ al-iʿdādāt bāsm"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "īḥfẓ tġyirāt tkwyn kernel al-ẖāṣẗ bk fī mlf al-tkwyn al-mūǧūd fī al-mǧld al-mḥdd."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "tḥmīl al-iʿdādāt mn"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "īqūm btḥmīl tkwyn kernel mn mlf al-tkwyn al-mḥdd."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "iʿādẗ tḥmīl al-iʿdādāt"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "īʿīd tḥmīl tkwyn al-nwāẗ lʾaīẗ tġyirāt ẖārǧīẗ"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "al-tḥqq mn ūǧūd tḥdīṯāt al-nẓām"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "mʿlūmāt al-nẓām"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "ant al-ʾān fī al-ṣfḥẗ al-mqṣūdẗ liʿdādāt {0}. ḥdd qsmmā aū ẖīārrā llbdʾ. aʿtmāddā ʿli al-iʿdādāt al-tī qmt btġyirhā, qd tḥtāǧ ili iʿādẗ tšġīl kernel."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "ǧārٍ tḥmīl al-qsm..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "wāḥd aū akṯr mn al-iʿdādāt al-tālīẗ al-mūǧūdẗ fī hḏā al-qsm ġīr mdʿūmẗ fī nẓāmk al-ʾasāsī:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "qsm ġīr ṣālḥ. īrǧi al-ʿūdẗ."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "mftāḥ ġīr ṣālḥ. īrǧi al-ʿūdẗ."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "ǧārٍ al-bḥṯ ʿn al-iʿdādāt..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "tm al-ʿṯūr ʿli hḏh al-iʿdādāt. rǧāʾā aẖtr wāḥdẗ."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "fšl fī al-ʿṯūr ʿli al-iʿdād al-mṭlūb."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6589,14 +6497,6 @@
       "text": "al-tārīẖ wālūqt al-bsīṭ fī mntṣf al-šāšẗ."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "tarhil altakwin alqadim"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "tarhil baed altakwinat alqadimat min al'iisdarat al'aqdam lilnawa"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "rubama lam yatima 'iikmal tarhil altakwin binajahi. 'iidha kunt mtakdan min 'ana milafaat altakwin alkhasat bik salihatun, fatahaqaq min sijilaat altashih lilhusul ealaa mazid min almaelumati."
     },
@@ -6887,10 +6787,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "sayatimu 'iiqaf tashghil alnawat almawjudat fi almathil albaeid"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "yastakhdim namat al'iiedadat alqadima"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7379,18 +7275,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "lam yatima aleuthur ealaa 'iidkhalat al'iiedadati."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "altahaquq min tahdithat alnizam (yatatalab atsalaan nshtan bial'iintirnti)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "yaerid lak maelumat alnizam al'asasia (mazid min almaelumat mutawafiratan fi al'amr \"sysinfo\")."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "la yumkin alhusul ealaa alqisam"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8937,14 +8821,6 @@
       "text": "aikhtiar altakwini."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "tama 'iiqaf tatbiq al'iiedadat alqadim wasayatimu 'iizalatuh fi 'iisdar mustaqbili."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "yutlb mink aikhtiar nuskhat takwini."
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "hadad nuskhat takwin liltabdil 'iilayha."
     },
@@ -9223,6 +9099,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "hadath khata fi Chatbot AI. yurja alta'akud min atisalik bial'iintirnta, wa'ana miftah API alkhasi bik salihu, wa'anak la tatajawaz hisat API almukhasasat lika."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "yakhtar shashat tawaquf eashwayiya"
     }
   ]
 }
