--- a/public/Nitrocid.Base/Resources/Languages/chi.json
+++ b/public/Nitrocid.Base/Resources/Languages/chi.json
@@ -543,10 +543,6 @@
       "text": "chūkǒu"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "zhǐdìng de xuǎnxiàng {0} wúxiào."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Zài qǐdòng shí jiǎnchá gēngxīn"
     },
@@ -899,10 +895,6 @@
       "text": "Zhǐdìng de xíng hào bùnéng dàyú zuìhòu yīgè wénjiàn de xíng hào."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Àn rènyì jiàn fǎnhuí."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, Zài {1} {2} zhōng chuàngjiàn, zài {3} {4} zhōng xiūgǎi"
     },
@@ -1237,10 +1229,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Zìfú yǐ shānchú."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Huānyíng lái dào shèzhì!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1785,14 +1773,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "shǐyòng zhèngzé biǎodá shì cháxún zhǐdìng xíng huò suǒyǒu xíng zhōng de dāncí"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "xiě xià nín yào sōusuǒ de nèiróng."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Shénme dōu zhǎo bù dào. Quèbǎo nín yǐ zhèngquè biānxiě shèzhì."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4091,84 +4071,12 @@
       "text": "wèi zhǎo dào shè zhì lèi xíng 。"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "xún zhǎo yī gè xuǎn xiàng"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "yǔn xǔ nín shǐ yòng biāo tí huò zhí qīng sōng sōu suǒ shè zhì tiáo mù 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "bǎo cún shè zhì"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "jiāng nèi hé pèi zhì gēng gǎi bǎo cún dào yīng yòng chéng xù shù jù wén jiàn jiā zhōng de pèi zhì wén jiàn zhōng 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "jiāng shè zhì lìng cún wéi"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "jiāng nèi hé pèi zhì gēng gǎi bǎo cún dào zhǐ dìng wén jiàn jiā zhōng de pèi zhì wén jiàn 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "jiā zài shè zhì zì"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "cóng zhǐ dìng de pèi zhì wén jiàn jiā zài nèi hé pèi zhì 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "zhòng xīn jiā zài shè zhì"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "zhòng xīn jiā zài nèi hé pèi zhì yǐ jìn xíng rèn hé wài bù gēng gǎi"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "jiǎn chá xì tǒng gēng xīn"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "xì tǒng xìn xī"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "nín xiàn zài wèi yú {0} shè zhì de mù biāo wǎng yè shàng 。 xuǎn zé yī gè bù fēn huò yī gè xuǎn xiàng jí kě kāi shǐ 。 gēn jù nín gēng gǎi de shè zhì ， nín kě néng xū yào zhòng xīn qǐ dòng nèi hé 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "jiā zài bù fēn ..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "nín de píng tái bù zhī chí běn jié zhōng de yǐ xià yī xiàng huò duō xiàng shè zhì ："
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "wú xiào bù fēn 。 qǐng huí qù bā 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "wú xiào de mì yuè 。 qǐng huí qù bā 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "zhèng zài sōu suǒ shè zhì ..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "zhǎo dào zhè xiē shè zhì 。 qǐng xuǎn zé yī xiàng 。"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "wú fǎ zhǎo dào nín qǐng qiú de shè zhì 。"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6571,14 +6479,6 @@
       "text": "píng mù zhōng jiān de jiǎn dān rì qī hé shí jiān 。"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Qiānyí jiù pèizhì"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "cóng jiù bǎnběn de nèihé qiānyí yīxiē jiù pèizhì"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "pèizhì qiānyí kěnéng wèi chénggōng wánchéng. Rúguǒ nín quèdìng pèizhì wénjiàn yǒuxiào, qǐng yánjiū tiáoshì rìzhì yǐ huòqǔ gèng duō xìnxī."
     },
@@ -6869,10 +6769,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "yuǎnchéng shílì zhōng de nèihé jiāng bèi guānbì"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "shǐyòng jiù shèzhì yàngshì"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7361,18 +7257,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "wèi zhǎodào shèzhì tiáomù."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Jiǎnchá xìtǒng gēngxīn (xūyào yǒuxiào de Internet liánjiē)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Xiǎnshì jīběn xìtǒng xìnxī (gèng duō xìnxī kě zài “sysinfo” mìnglìng zhōng zhǎodào)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Wúfǎ huòqǔ bùfèn"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8919,14 +8803,6 @@
       "text": "xuǎnzé pèizhì"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "jiùbǎn shèzhì yìngyòng yǐ qì yòng, bìng jiàng zài wèilái bǎnběn zhōng yí chú."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Tíshì nín xuǎnzé pèizhì shílì"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "xuǎnzé yào qiēhuàn dào de pèizhì shílì."
     },
@@ -9205,6 +9081,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Liáotiān jīqìrén AI fāshēng cuòwù. Qǐng quèbǎo nín yǐ liánjiē dào hùliánwǎng,API mì yào yǒuxiào, bìngqiě wèi chāochū API pèi'é."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Xuǎnzé suíjī píngmù bǎohù chéngxù"
     }
   ]
 }
