--- a/public/Nitrocid.Base/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Base/Resources/Languages/dtc.json
@@ -541,10 +541,6 @@
       "text": "Uitgang"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Opgegeven optie {0} is ongeldig."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Controleer op updates bij het opstarten"
     },
@@ -897,10 +893,6 @@
       "text": "Het opgegeven regelnummer mag niet groter zijn dan het laatste regelnummer van het bestand."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Druk op een willekeurige toets om terug te gaan."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, gemaakt in {1} {2}, gewijzigd in {3} {4}"
     },
@@ -1235,10 +1227,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Karakter verwijderd."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Welkom bij Instellingen!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1783,14 +1771,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Zoekt een woord in een opgegeven regel of alle regels op met behulp van reguliere expressies"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Schrijf op waarnaar je wilt zoeken."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Er wordt niets gevonden. Zorg ervoor dat u de instelling correct hebt geschreven."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4089,84 +4069,12 @@
       "text": "Type instelling is niet gevonden."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Zoek een optie"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Hiermee kunt u eenvoudig naar een instellingsitem zoeken met behulp van de titel of de waarde ervan."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Instellingen opslaan"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Slaat uw kernelconfiguratiewijzigingen op in het configuratiebestand in de map met toepassingsgegevens."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Instellingen opslaan als"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Slaat uw kernelconfiguratiewijzigingen op in het configuratiebestand in de opgegeven map."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Instellingen laden van"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Laadt de kernelconfiguratie vanuit het opgegeven configuratiebestand."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Instellingen opnieuw laden"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Herlaadt de kernelconfiguratie voor eventuele externe wijzigingen"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Controleer op systeemupdates"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Systeem informatie"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "U bevindt zich op de landingspagina van de {0}-instellingen. Selecteer een sectie of een optie om aan de slag te gaan. Afhankelijk van welke instellingen u hebt gewijzigd, moet u mogelijk de kernel opnieuw opstarten."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Sectie laden..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Een of meer van de volgende instellingen in deze sectie worden niet ondersteund op uw platform:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Ongeldig gedeelte. Ga alsjeblieft terug."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Ongeldige sleutel. Ga alsjeblieft terug."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Zoeken naar instellingen..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Deze instellingen zijn gevonden. Selecteer er een alstublieft."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Kan de door u gevraagde instelling niet vinden."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6569,14 +6477,6 @@
       "text": "Eenvoudige datum en tijd in het midden van het scherm."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Migreer oude configuratie"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Migreert een deel van uw oude configuratie van oudere versies van de kernel"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "De configuratiemigratie is mogelijk niet met succes voltooid. Als u zeker weet dat uw configuratiebestanden geldig zijn, onderzoekt u de foutopsporingslogboeken voor meer informatie."
     },
@@ -6867,10 +6767,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "De kernel in de externe instantie wordt afgesloten"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Gebruikt de oude instellingenstijl"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7359,18 +7255,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Er zijn geen instellingen gevonden."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Controleert op systeemupdates (vereist een actieve internetverbinding)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Geeft u basissysteeminformatie weer (meer informatie is beschikbaar via de opdracht 'sysinfo')."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Kan sectie niet krijgen"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8917,14 +8801,6 @@
       "text": "Configuratie selecteren"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "De oude instellingen-app is verouderd en wordt in een toekomstige release verwijderd."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Vraagt u een configuratie-instantie te selecteren"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Selecteer een configuratie-instantie waarnaar u wilt overschakelen."
     },
@@ -9203,6 +9079,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Er is een Chatbot AI-fout opgetreden. Zorg ervoor dat u een internetverbinding heeft, uw API-sleutel geldig is en dat u uw API-quotum niet overschrijdt."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Selecteert een willekeurige screensaver"
     }
   ]
 }
