--- a/public/Nitrocid.Base/Resources/Languages/fre.json
+++ b/public/Nitrocid.Base/Resources/Languages/fre.json
@@ -581,10 +581,6 @@
       "text": "Sortie"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "L'option spécifiée {0} n'est pas valide."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Rechercher des mises à jour au démarrage"
     },
@@ -937,10 +933,6 @@
       "text": "Le numéro de ligne spécifié ne peut pas être supérieur au dernier numéro de ligne de fichier."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Appuyez sur n'importe quelle touche pour revenir en arrière."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, créé en {1} {2}, modifié en {3} {4}"
     },
@@ -1275,10 +1267,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Caractère supprimé."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Bienvenue dans Paramètres !"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1823,14 +1811,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Interroge un mot dans une ligne spécifiée ou toutes les lignes à l'aide d'expressions régulières"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Écrivez ce que vous voulez rechercher."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Rien n'est trouvé. Assurez-vous que vous avez correctement écrit le paramètre."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4129,84 +4109,12 @@
       "text": "Le type de paramètres est introuvable."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Trouver une option"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Vous permet de rechercher facilement une entrée de paramètres en utilisant soit son titre, soit sa valeur."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Enregistrer les paramètres"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Enregistre les modifications de configuration du noyau dans le fichier de configuration trouvé dans le dossier de données de l'application."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Enregistrer les paramètres sous"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Enregistre les modifications de configuration du noyau dans le fichier de configuration trouvé dans le dossier spécifié."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Charger les paramètres depuis"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Charge la configuration du noyau à partir du fichier de configuration spécifié."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Recharger les paramètres"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Recharge la configuration du noyau pour toute modification externe"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Rechercher les mises à jour du système"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Informations système"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Vous êtes sur la page de destination des paramètres {0}. Sélectionnez une section ou une option pour commencer. En fonction des paramètres que vous avez modifiés, vous devrez peut-être redémarrer le noyau."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Chargement de la rubrique..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Un ou plusieurs des paramètres suivants trouvés dans cette section ne sont pas pris en charge sur votre plate-forme :"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Section invalide. S'il vous plaît, revenez."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Clé non valide. S'il vous plaît, revenez."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Recherche de paramètres..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Ces paramètres sont trouvés. S'il vous plait sélectionner en un."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Impossible de trouver le paramètre demandé."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6609,14 +6517,6 @@
       "text": "Date et heure simples au milieu de l'écran."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Migrer l'ancienne configuration"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Migre une partie de votre ancienne configuration à partir d'anciennes versions du noyau"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "La migration de la configuration n'a peut-être pas été effectuée correctement. Si vous êtes sûr que vos fichiers de configuration sont valides, examinez les journaux de débogage pour plus d'informations."
     },
@@ -6907,10 +6807,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Le noyau de l'instance distante sera arrêté"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Utilise le style des paramètres hérités"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7399,18 +7295,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Les entrées de paramètres ne sont pas trouvées."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Vérifie les mises à jour du système (nécessite une connexion Internet active)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Vous montre les informations de base du système (plus d'informations disponibles dans la commande « sysinfo »)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Impossible d'obtenir la section"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8957,14 +8841,6 @@
       "text": "Sélectionner la configuration"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "L'ancienne application de paramètres est obsolète et sera supprimée dans une prochaine version."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Vous invite à sélectionner une instance de configuration."
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Sélectionnez une instance de configuration vers laquelle basculer."
     },
@@ -9243,6 +9119,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Une erreur de Chatbot AI s'est produite. Veuillez vous assurer que vous disposez d'une connexion Internet, que votre clé API est valide et que vous ne dépassez pas votre quota d'API."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Sélectionne un économiseur d'écran aléatoire"
     }
   ]
 }
