--- a/public/Nitrocid.Base/Resources/Languages/grk.json
+++ b/public/Nitrocid.Base/Resources/Languages/grk.json
@@ -536,10 +536,6 @@
       "text": "Εξοδος"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Η καθορισμένη επιλογή {0} δεν είναι έγκυρη."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Ελέγξτε για ενημερώσεις κατά την εκκίνηση"
     },
@@ -892,10 +888,6 @@
       "text": "Ο καθορισμένος αριθμός γραμμής δεν μπορεί να είναι μεγαλύτερος από τον αριθμό γραμμής του τελευταίου αρχείου."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Πατήστε οποιοδήποτε πλήκτρο για να επιστρέψετε."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, Δημιουργήθηκε σε {1} {2}, Τροποποιήθηκε σε {3} {4}"
     },
@@ -1230,10 +1222,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Ο χαρακτήρας διαγράφηκε."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Καλώς ορίσατε στις Ρυθμίσεις!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1778,14 +1766,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Υποβάλλει ερώτημα σε μια λέξη σε μια καθορισμένη γραμμή ή σε όλες τις γραμμές χρησιμοποιώντας κανονικές εκφράσεις"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Γράψτε τι θέλετε να αναζητήσετε."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Δεν βρέθηκε τίποτα. Βεβαιωθείτε ότι έχετε γράψει σωστά τη ρύθμιση."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4084,84 +4064,12 @@
       "text": "Ο τύπος ρυθμίσεων δεν βρέθηκε."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Βρείτε μια επιλογή"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Σας επιτρέπει να αναζητάτε εύκολα μια καταχώρηση ρυθμίσεων χρησιμοποιώντας είτε τον τίτλο είτε την τιμή της."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Αποθήκευση ρυθμίσεων"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Αποθηκεύει τις αλλαγές διαμόρφωσης του πυρήνα στο αρχείο διαμόρφωσης που βρίσκεται στο φάκελο δεδομένων της εφαρμογής."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Αποθήκευση ρυθμίσεων ως"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Αποθηκεύει τις αλλαγές στη διαμόρφωση του πυρήνα στο αρχείο διαμόρφωσης που βρίσκεται στον καθορισμένο φάκελο."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Φόρτωση ρυθμίσεων από"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Φορτώνει τη διαμόρφωση του πυρήνα από το καθορισμένο αρχείο διαμόρφωσης."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Επαναφόρτωση ρυθμίσεων"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Φορτώνει ξανά τη διαμόρφωση του πυρήνα για τυχόν εξωτερικές αλλαγές"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Ελέγξτε για ενημερώσεις συστήματος"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Πληροφορίες συστήματος"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Βρίσκεστε στη σελίδα προορισμού των ρυθμίσεων {0}. Επιλέξτε μια ενότητα ή μια επιλογή για να ξεκινήσετε. Ανάλογα με τις ρυθμίσεις που έχετε αλλάξει, ίσως χρειαστεί να κάνετε επανεκκίνηση του πυρήνα."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Φόρτωση ενότητας..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Μία ή περισσότερες από τις ακόλουθες ρυθμίσεις που βρίσκονται σε αυτήν την ενότητα δεν υποστηρίζονται στην πλατφόρμα σας:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Μη έγκυρη ενότητα. Παρακαλώ επιστρέψτε."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Μη έγκυρο κλειδί. Παρακαλώ επιστρέψτε."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Αναζήτηση ρυθμίσεων..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Βρέθηκαν αυτές οι ρυθμίσεις. Παρακαλώ επιλέξτε ένα."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Αποτυχία εύρεσης της ρύθμισης που ζητήσατε."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6564,14 +6472,6 @@
       "text": "Απλή ημερομηνία και ώρα στη μέση της οθόνης."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Μετεγκατάσταση παλιάς διαμόρφωσης"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Μεταφέρει ορισμένες από τις παλιές σας ρυθμίσεις από παλαιότερες εκδόσεις του πυρήνα"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "Η μετεγκατάσταση της διαμόρφωσης ενδέχεται να μην έχει ολοκληρωθεί με επιτυχία. Εάν είστε βέβαιοι ότι τα αρχεία διαμόρφωσής σας είναι έγκυρα, διερευνήστε τα αρχεία καταγραφής εντοπισμού σφαλμάτων για περισσότερες πληροφορίες."
     },
@@ -6862,10 +6762,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Ο πυρήνας στην απομακρυσμένη παρουσία θα τερματιστεί"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Χρησιμοποιεί το στυλ ρυθμίσεων παλαιού τύπου"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7354,18 +7250,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Οι καταχωρήσεις ρυθμίσεων δεν βρέθηκαν."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Ελέγχει για ενημερώσεις συστήματος (απαιτείται ενεργή σύνδεση στο Διαδίκτυο)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Σας εμφανίζει βασικές πληροφορίες συστήματος (περισσότερες πληροφορίες είναι διαθέσιμες στην εντολή 'sysinfo')."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Δεν είναι δυνατή η λήψη του τμήματος"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8912,14 +8796,6 @@
       "text": "Επιλέξτε διαμόρφωση"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "Η εφαρμογή ρυθμίσεων παλαιού τύπου έχει καταργηθεί και θα καταργηθεί σε μελλοντική κυκλοφορία."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Σας ζητά να επιλέξετε μια παρουσία διαμόρφωσης"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Επιλέξτε ένα στιγμιότυπο διαμόρφωσης για μετάβαση."
     },
@@ -9198,6 +9074,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Παρουσιάστηκε σφάλμα AI του Chatbot. Βεβαιωθείτε ότι έχετε σύνδεση στο Διαδίκτυο, ότι το κλειδί API σας είναι έγκυρο και ότι δεν υπερβαίνετε το όριο του API σας."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Επιλέγει μια τυχαία προφύλαξη οθόνης"
     }
   ]
 }
