--- a/public/Nitrocid.Base/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/ind-T.json
@@ -535,10 +535,6 @@
       "text": "बाहर जाएं"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "निर्दिष्ट विकल्प {0} अमान्य है।"
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "स्टार्टअप पर अपडेट के लिए जाँच करें"
     },
@@ -891,10 +887,6 @@
       "text": "निर्दिष्ट पंक्ति संख्या अंतिम फ़ाइल लाइन संख्या से बड़ी नहीं हो सकती है।"
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "वापस जाने के लिए कोई भी कुंजी दबाएँ।"
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, {1} {2} में बनाया गया, {3} {4} में संशोधित"
     },
@@ -1229,10 +1221,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "चरित्र हटा दिया गया।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "सेटिंग्स में आपका स्वागत है!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1777,14 +1765,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "रेगुलर एक्सप्रेशन का उपयोग करके किसी शब्द को एक निर्दिष्ट पंक्ति या सभी पंक्तियों में क्वेरी करता है"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "लिखें कि आप क्या खोजना चाहते हैं।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "कुछ नहीं मिला। सुनिश्चित करें कि आपने सेटिंग सही लिखी है।"
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4083,84 +4063,12 @@
       "text": "सेटिंग प्रकार नहीं मिला."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "एक विकल्प खोजें"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "आपको किसी सेटिंग प्रविष्टि को उसके शीर्षक या उसके मान का उपयोग करके आसानी से खोजने की अनुमति देता है।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "सेटिंग्स सेव करें"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "आपके कर्नेल कॉन्फ़िगरेशन परिवर्तनों को एप्लिकेशन डेटा फ़ोल्डर में पाई गई कॉन्फ़िगरेशन फ़ाइल में सहेजता है।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "सेटिंग्स को इस रूप में सहेजें"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "आपके कर्नेल कॉन्फ़िगरेशन परिवर्तनों को निर्दिष्ट फ़ोल्डर में मिली कॉन्फ़िगरेशन फ़ाइल में सहेजता है।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "से सेटिंग लोड करें"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "निर्दिष्ट कॉन्फ़िगरेशन फ़ाइल से कर्नेल कॉन्फ़िगरेशन लोड करता है।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "सेटिंग्स पुनः लोड करें"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "किसी भी बाहरी परिवर्तन के लिए कर्नेल कॉन्फ़िगरेशन को पुनः लोड करता है"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "सिस्टम अपडेट की जांच करें"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "व्यवस्था जानकारी"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "आप {0} सेटिंग के लैंडिंग पृष्ठ पर हैं। आरंभ करने के लिए एक अनुभाग या विकल्प चुनें. आपने कौन सी सेटिंग्स बदली हैं, उसके आधार पर आपको कर्नेल को पुनरारंभ करने की आवश्यकता हो सकती है।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "अनुभाग लोड हो रहा है..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "इस अनुभाग में पाई गई निम्न में से एक या अधिक सेटिंग्स आपके प्लेटफ़ॉर्म में समर्थित नहीं हैं:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "अमान्य अनुभाग. कृपया वापस जाएँ."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "अमान्य कुंजी। कृपया वापस जाएँ."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "सेटिंग्स खोजी जा रही हैं..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "ये सेटिंग्स पाई जाती हैं. कृपया एक का चयन करें।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "आपकी अनुरोधित सेटिंग ढूंढने में विफल."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6563,14 +6471,6 @@
       "text": "स्क्रीन के मध्य में सरल दिनांक और समय।"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "पुराने कॉन्फ़िगरेशन को माइग्रेट करें"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "आपके कुछ पुराने कॉन्फ़िगरेशन को कर्नेल के पुराने संस्करणों से माइग्रेट करता है"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "हो सकता है कि कॉन्फ़िगरेशन माइग्रेशन सफलतापूर्वक पूरा न हुआ हो. यदि आप आश्वस्त हैं कि आपकी कॉन्फ़िगरेशन फ़ाइलें मान्य हैं, तो अधिक जानकारी के लिए डिबग लॉग की जाँच करें।"
     },
@@ -6861,10 +6761,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "दूरस्थ इंस्टैंस में कर्नेल बंद हो जाएगा"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "विरासत सेटिंग शैली का उपयोग करता है"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7353,18 +7249,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "सेटिंग्स प्रविष्टियाँ नहीं मिलीं."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "सिस्टम अपडेट की जांच करता है (सक्रिय इंटरनेट कनेक्शन की आवश्यकता होती है)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "आपको बुनियादी सिस्टम जानकारी दिखाता है (अधिक जानकारी 'sysinfo' कमांड में उपलब्ध है)।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "अनुभाग नहीं मिल सका"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8911,14 +8795,6 @@
       "text": "कॉन्फ़िगरेशन चुनें"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "लीगेसी सेटिंग ऐप को हटा दिया गया है और इसे भविष्य के रिलीज़ में हटा दिया जाएगा।"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "आपको कॉन्फ़िगरेशन इंस्टेंस चुनने के लिए संकेत देता है"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "स्विच करने के लिए कॉन्फ़िगरेशन इंस्टेंस चुनें।"
     },
@@ -9197,6 +9073,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "चैटबॉट AI में एक त्रुटि हुई है। कृपया सुनिश्चित करें कि आपके पास इंटरनेट कनेक्शन है, आपकी API कुंजी मान्य है, और आप अपने API कोटा से अधिक उपयोग नहीं कर रहे हैं।"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "एक यादृच्छिक स्क्रीनसेवर का चयन करता है"
     }
   ]
 }
