--- a/public/Nitrocid.Base/Resources/Languages/ind.json
+++ b/public/Nitrocid.Base/Resources/Languages/ind.json
@@ -535,10 +535,6 @@
       "text": "baahar jaen"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "nirdisht vikalp {0} amaany hai."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "staartap par apadet ke lie jaanch karen"
     },
@@ -891,10 +887,6 @@
       "text": "nirdisht pankti sankhya antim fail lain sankhya se badee nahin ho sakatee hai."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "vaapas jaane ke lie koee bhee kunjee dabaen."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, {1} {2} mein banaaya gaya, {3} {4} mein sanshodhit"
     },
@@ -1229,10 +1221,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "charitr hata diya gaya."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "setings mein aapaka svaagat hai!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1777,14 +1765,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "regular eksapreshan ka upayog karake kisee shabd ko ek nirdisht pankti ya sabhee panktiyon mein kveree karata hai"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "likhen ki aap kya khojana chaahate hain."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "kuchh nahin mila. sunishchit karen ki aapane seting sahee likhee hai."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4083,84 +4063,12 @@
       "text": "seting prakaar nahin mila."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "koee vikalp khojen"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "aapako kisee seting pravishti ko usake sheershak ya usake maan ka upayog karake aasaanee se khojane kee anumati deta hai."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "setings sahejen"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "aapake karnel konfigareshan parivartanon ko eplikeshan deta foldar mein paee gaee konfigareshan fail mein sahejata hai."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "setings ko is roop mein sahejen"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "aapake karnel konfigareshan parivartanon ko nirdisht foldar mein paee gaee konfigareshan fail mein sahejata hai."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "setings lod karen"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "nirdisht konfigareshan fail se karnel konfigareshan lod karata hai."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "setings punah lod karen"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "kisee bhee baaharee parivartan ke lie karnel konfigareshan ko punah lod karata hai"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "sistam apadet kee jaanch karen"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "sistam jaanakaaree"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "aap {0} setings ke lainding pej par hain. aarambh karane ke lie koee anubhaag ya vikalp chunen. aapane kaun see seting badalee hai, isake aadhaar par aapako karnel ko punah aarambh karane kee aavashyakata ho sakatee hai."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "anubhaag lod ho raha hai..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "is anubhaag mein paee gaee nimn mein se ek ya adhik seting aapake pletaform mein samarthit nahin hain:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "amaany anubhaag. krpaya vaapas jaen."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "amaany kunjee. krpaya vaapas jaen."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "setings khoj raha hai..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "ye seting mil gaee hain. krpaya ek ka chayan karen."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "aapakee anurodhit seting dhoondhane mein viphal."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6563,14 +6471,6 @@
       "text": "skreen ke beech mein saral dinaank aur samay."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "puraane konfigareshan ko maigret karen"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "karnel ke puraane sanskaranon se aapake kuchh puraane konfigareshan ko maigret karata hai"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "konfigareshan maigreshan saphalataapoorvak poora nahin hua ho sakata hai. yadi aap sunishchit hain ki aapakee konfigareshan failen maany hain, to adhik jaanakaaree ke lie deebag log kee jaanch karen."
     },
@@ -6861,10 +6761,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "rimot instens mein karnel band ho jaega"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "leegesee seting stail ka upayog karata hai"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7353,18 +7249,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "seting pravishtiyaan nahin milee."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "sistam apadet kee jaanch karata hai (sakriy intaranet kanekshan kee aavashyakata hai)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "aapako buniyaadee sistam jaanakaaree dikhaata hai (sysinfo kamaand mein adhik jaanakaaree upalabdh hai)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "anubhaag nahin mil sakata"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8911,14 +8795,6 @@
       "text": "konfigareshan chunen"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "leegesee seting aip ko hata diya gaya hai aur ise bhavishy ke rileez mein hata diya jaega."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "aapako konfigareshan instens chunane ke lie sanket deta hai"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "svich karane ke lie konfigareshan instens chunen."
     },
@@ -9197,6 +9073,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "chaitabot ai mein ek truti huee hai. krpaya sunishchit karen ki aapake paas intaranet kanekshan hai, aapakee api kunjee maany hai, aur aap apane api kota se adhik upayog nahin kar rahe hain."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "ek yaadrchchhik skreenasevar ka chayan karata hai"
     }
   ]
 }
