--- a/public/Nitrocid.Base/Resources/Languages/iri.json
+++ b/public/Nitrocid.Base/Resources/Languages/iri.json
@@ -536,10 +536,6 @@
       "text": "Scoir"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Tá an rogha shonraithe {0} neamhbhailí."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Seiceáil le haghaidh Nuashonruithe ar Thosaithe"
     },
@@ -892,10 +888,6 @@
       "text": "Ní fhéadfaidh an uimhir líne sonraithe a bheith níos mó ná an uimhir líne comhaid dheireanach."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Brúigh eochair ar bith chun dul ar ais."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, Cruthaithe in {1} {2}, Athraithe in {3} {4}"
     },
@@ -1230,10 +1222,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Carachtar scriosta."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Fáilte go Socruithe!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1778,14 +1766,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Ceistíonn sé focal i líne shonraithe nó i ngach líne ag baint úsáide as nathanna rialta"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Scríobh cad ba mhaith leat a chuardach."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Ní fhaightear aon rud. Bí cinnte go bhfuil an socrú scríofa i gceart agat."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4084,84 +4064,12 @@
       "text": "Ní aimsítear cineál na socruithe."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Faigh rogha"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Ligeann sé duit iontráil socruithe a chuardach go héasca ag baint úsáide as a theideal nó a luach."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Sábháil socruithe"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Sábhálann sé do chuid athruithe cumraíochta eithne ar an gcomhad cumraíochta a fhaightear i bhfillteán sonraí an fheidhmchláir."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Sábháil socruithe mar"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Sábháil do chuid athruithe cumraíochta eithne ar an gcomhad cumraíochta a fhaightear san fhillteán sonraithe."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Íosluchtaigh socruithe ó"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Luchtaíonn an chumraíocht eithne ón gcomhad cumraíochta sonraithe."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Athlódáil socruithe"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Athlódáil an chumraíocht eithne le haghaidh aon athruithe seachtracha"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Seiceáil le haghaidh nuashonruithe córais"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Eolas córais"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Tá tú ar leathanach tuirlingthe na socruithe {0}. Roghnaigh roinn nó rogha chun tús a chur leis. Ag brath ar na socruithe a d'athraigh tú, seans go mbeidh ort an eithne a atosú."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Rannóg á lódáil..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Ní thacaítear le ceann amháin nó níos mó de na socruithe seo a leanas a aimsítear sa rannán seo ar d'ardán:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Alt neamhbhailí. Téigh ar ais le do thoil."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Eochair neamhbhailí. Téigh ar ais le do thoil."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Socruithe á gcuardach..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Faightear na socruithe seo. Roghnaigh ceann le do thoil."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Theip ar do shocrú iarrtha a aimsiú."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6564,14 +6472,6 @@
       "text": "Dáta agus am simplí i lár an scáileáin."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Aistrigh seanchumraíocht"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Aistríonn sé cuid de do sheanchumraíocht ó leaganacha níos sine den eithne"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "Seans nár críochnaíodh ascnamh cumraíochta go rathúil. Má tá tú cinnte go bhfuil do chomhaid chumraíochta bailí, fiosraigh na logaí dífhabhtaithe le haghaidh tuilleadh faisnéise."
     },
@@ -6862,10 +6762,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Dúnfar an t-eithne sa chianchéim"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Úsáideann sé an stíl socruithe oidhreachta"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7354,18 +7250,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Ní aimsítear iontrálacha socruithe."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Seiceálacha le haghaidh nuashonruithe córais (tá nasc gníomhach Idirlín ag teastáil)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Taispeánann sé buneolas córais duit (tuilleadh eolais ar fáil san ordú 'sysinfo')."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Ní féidir alt a fháil"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8912,14 +8796,6 @@
       "text": "Roghnaigh cumraíocht"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "Tá an aip socruithe oidhreachta imithe i léig agus bainfear í in eisiúint amach anseo."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Spreagann tú sampla cumraíochta a roghnú"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Roghnaigh sampla cumraíochta le haistriú chuige."
     },
@@ -9198,6 +9074,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Tharla earráid le Chatbot AI. Cinntigh go bhfuil nasc Idirlín agat, go bhfuil d'eochair API bailí, agus nach sáraíonn tú do chuóta API."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Roghnaíonn sé spárálaíscáileáin randamach"
     }
   ]
 }
