--- a/public/Nitrocid.Base/Resources/Languages/kor.json
+++ b/public/Nitrocid.Base/Resources/Languages/kor.json
@@ -536,10 +536,6 @@
       "text": "chulgu"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "jijeongdoen obsyeon {0}i (ga) jalmosdoeeossseubnida."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "sijagsi eobdeiteu hwag-in"
     },
@@ -892,10 +888,6 @@
       "text": "jijeongdoen jul beonhoneun majimag pail jul beonhoboda keul su eobs-seubnida."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "dol-agalyeomyeon amu kina nuleusibsio."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, {1} {2}e saengseong, {3} {4}e sujeong doem"
     },
@@ -1230,10 +1222,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "kaeligteoga sagjedoeeossseubnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "seoljeong-e osin geos-eul hwan-yeonghabnida!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1778,14 +1766,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "jeong-gyusig-eul sayonghayeo jijeongdoen jul ttoneun modeun jul-ui dan-eoleul kwolihabnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "mueos-eul geomsaeghal geos-inji jagseonghasibsio."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "amugeosdo balgyeondoeji anhseubnida. seoljeong-eul olbaleuge jagseonghaessneunji hwag-inhasibsio."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4084,84 +4064,12 @@
       "text": "seoljeong yuhyeongeul chajeul su eopsseupnida."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "opsyeon chajgi"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "jemogina gapseul sayonghayeo seoljeong hangmogeul swipge geomsaekhal su issseupnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "seoljeong jeojang"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "keoneol guseong byeongyeong sahangeul aepeullikeisyeon deiteo poldeoe issneun guseong paire jeojanghapnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "dareun ireumeuro seoljeong jeojang"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "keoneol guseong byeongyeong sahangeul jijeongdoen poldeoe issneun guseong paire jeojanghapnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "daeumeseo seoljeong rodeu"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "jijeongdoen guseong paireseo keoneol guseongeul rodeuhapnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "seoljeong saerogochim"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "oebu byeongyeong sahange daehae keoneol guseongeul dasi rodeuhapnida."
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "siseutem eopdeiteu hwagin"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "siseutem jeongbo"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "gwihaneun {0} seoljeongui bangmun peijie issseupnida. sijakharyeomyeon seksyeonina opsyeoneul seontaekhaseyo. byeongyeonghan seoljeonge ttara keoneoreul dasi sijakhaeya hal sudo issseupnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "seksyeon rodeu jung..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "i seksyeone issneun daeum seoljeong jung hana isangi gwihaui peullaespomeseo jiwondoeji anhseupnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "seksyeoni jalmosdoeeossseupnida. doragajuseyo."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "yuhyohaji anheun ki. doragajuseyo."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "seoljeong geomsaek jung..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "ireohan seoljeongi balgyeondoeeossseupnida. hanareul gollajuseyo."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "yocheonghan seoljeongeul chajji moshaessseupnida."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6564,14 +6472,6 @@
       "text": "hwamyeon jungange gandanhan naljjawa sigani pyosidoepnida."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "ijeon guseong maigeuleisyeon"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "ijeon beojeon-ui keoneol-eseo ijeon guseong jung ilbuleul maigeuleisyeonhabnida."
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "guseong maigeuleisyeon-i seong-gongjeog-eulo wanlyodoeji anh-ass-eul su issseubnida. guseong pail-i yuhyohadago hwagsinhaneun gyeong-u dibeogeu logeuleul josahayeo jasehan naeyong-eul hwag-inhaseyo."
     },
@@ -6862,10 +6762,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "wongyeog inseuteonseuui keoneol-i jonglyodoebnida."
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "legeosi seoljeong seutail-eul sayonghabnida."
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7354,18 +7250,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "seoljeong hangmog-eul chaj-eul su eobs-seubnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "siseutem eobdeiteuleul hwag-inhabnida(hwalseong inteones yeongyeol pil-yo)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "gibon siseutem jeongboleul pyosihabnida(jasehan jeongboneun 'sysinfo' myeonglyeong-eseo jegong)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "segsyeon-eul gajyeool su eobs-seubnida."
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8912,14 +8796,6 @@
       "text": "guseong seontaeg"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "legeosi seoljeong aeb-eun deo isang jiwondoeji anh-eumyeo hyanghu lilliseueseo jegeodoel yejeong-ibnida."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "guseong inseuteonseuleul seontaeghalaneun mesijileul pyosihabnida."
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "jeonhwanhal guseong inseuteonseuleul seontaeghabnida."
     },
@@ -9198,6 +9074,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "chaesbos AI olyuga balsaenghaessseubnida. inteones-e yeongyeoldoeeo issgo, API kiga yuhyohamyeo, API haldanglyang-eul chogwahaji anh-assneunji hwag-inhaseyo."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "mujag-wi seukeulinseibeoleul seontaeghabnida"
     }
   ]
 }
