--- a/public/Nitrocid.Base/Resources/Languages/mal.json
+++ b/public/Nitrocid.Base/Resources/Languages/mal.json
@@ -538,10 +538,6 @@
       "text": "Keluar"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Pilihan {0} yang ditentukan adalah tidak sah."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Semak Kemas Kini tentang Permulaan"
     },
@@ -894,10 +890,6 @@
       "text": "Nombor baris yang ditentukan mungkin tidak lebih besar daripada nombor baris fail terakhir."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Tekan sebarang kekunci untuk kembali."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, Dibuat dalam {1} {2}, Diubah suai dalam {3} {4}"
     },
@@ -1232,10 +1224,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Aksara dipadamkan."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Selamat datang ke Tetapan!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1780,14 +1768,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Menyoal perkataan dalam baris tertentu atau semua baris menggunakan ungkapan biasa"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Tulis apa yang anda ingin cari."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Tiada apa yang ditemui. Pastikan anda telah menulis tetapan dengan betul."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4086,84 +4066,12 @@
       "text": "Jenis tetapan tidak ditemui."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Cari pilihan"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Membolehkan anda mencari entri tetapan dengan mudah menggunakan tajuk atau nilainya."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Simpan tetapan"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Menyimpan perubahan konfigurasi kernel anda pada fail konfigurasi yang terdapat dalam folder data aplikasi."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Simpan tetapan sebagai"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Menyimpan perubahan konfigurasi kernel anda pada fail konfigurasi yang terdapat dalam folder yang ditentukan."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Muatkan tetapan daripada"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Memuatkan konfigurasi kernel daripada fail konfigurasi yang ditentukan."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Muat semula tetapan"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Muat semula konfigurasi kernel untuk sebarang perubahan luaran"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Semak kemas kini sistem"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Maklumat sistem"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Anda berada di halaman pendaratan tetapan {0}. Pilih bahagian atau pilihan untuk bermula. Bergantung pada tetapan yang telah anda ubah, anda mungkin perlu memulakan semula kernel."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Memuatkan bahagian..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Satu atau lebih tetapan berikut yang terdapat dalam bahagian ini tidak disokong dalam platform anda:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Bahagian tidak sah. Tolong balik."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Kunci tidak sah. Tolong balik."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Mencari tetapan..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Tetapan ini ditemui. Sila pilih satu."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Gagal menemui tetapan yang anda minta."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6566,14 +6474,6 @@
       "text": "Tarikh dan masa mudah di tengah-tengah skrin."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Pindahkan konfigurasi lama"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Memindahkan beberapa konfigurasi lama anda daripada versi kernel yang lebih lama"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "Penghijrahan konfigurasi mungkin tidak berjaya diselesaikan. Jika anda pasti bahawa fail konfigurasi anda sah, siasat log nyahpepijat untuk mendapatkan maklumat lanjut."
     },
@@ -6864,10 +6764,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Kernel dalam contoh jauh akan ditutup"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Menggunakan gaya tetapan lama"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7356,18 +7252,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Entri tetapan tidak ditemui."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Menyemak kemas kini sistem (memerlukan sambungan Internet yang aktif)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Menunjukkan kepada anda maklumat sistem asas (maklumat lanjut tersedia dalam arahan 'sysinfo')."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Tidak dapat bahagian"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8914,14 +8798,6 @@
       "text": "Pilih konfigurasi"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "Apl tetapan lama telah ditamatkan dan akan dialih keluar dalam keluaran akan datang."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Mengesa anda untuk memilih contoh konfigurasi"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Pilih contoh konfigurasi untuk ditukar."
     },
@@ -9200,6 +9076,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Ralat AI Chatbot telah berlaku. Sila pastikan anda mempunyai sambungan Internet, kunci API anda sah dan anda tidak melebihi kuota API anda."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Memilih penyelamat skrin rawak"
     }
   ]
 }
