--- a/public/Nitrocid.Base/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Base/Resources/Languages/ndo.json
@@ -535,10 +535,6 @@
       "text": "KELUAR"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Opsi yang ditentukan {0} tidak valid."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Periksa Pembaruan pada Startup"
     },
@@ -891,10 +887,6 @@
       "text": "Nomor baris yang ditentukan tidak boleh lebih besar dari nomor baris file terakhir."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Tekan tombol apa saja untuk kembali."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, Dibuat pada {1} {2}, Dimodifikasi pada {3} {4}"
     },
@@ -1229,10 +1221,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Karakter dihapus."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Selamat datang di Pengaturan!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1777,14 +1765,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Menanyakan kata dalam baris tertentu atau semua baris menggunakan ekspresi reguler"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Tulis apa yang ingin Anda cari."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Tidak ditemukan apa pun. Pastikan Anda telah menuliskan pengaturan dengan benar."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4083,84 +4063,12 @@
       "text": "Jenis pengaturan tidak ditemukan."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Temukan pilihan"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Memungkinkan Anda dengan mudah mencari entri pengaturan menggunakan judul atau nilainya."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Simpan pengaturan"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Menyimpan perubahan konfigurasi kernel Anda ke berkas konfigurasi yang ditemukan dalam folder data aplikasi."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Simpan pengaturan sebagai"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Menyimpan perubahan konfigurasi kernel Anda ke berkas konfigurasi yang ditemukan dalam folder yang ditentukan."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Muat pengaturan dari"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Memuat konfigurasi kernel dari berkas konfigurasi yang ditentukan."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Muat ulang pengaturan"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Memuat ulang konfigurasi kernel untuk setiap perubahan eksternal"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Periksa pembaruan sistem"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Informasi sistem"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Anda berada di halaman awal pengaturan {0}. Pilih bagian atau opsi untuk memulai. Bergantung pada pengaturan yang telah Anda ubah, Anda mungkin perlu memulai ulang kernel."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Memuat bagian..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Satu atau beberapa pengaturan berikut yang ditemukan di bagian ini tidak didukung di platform Anda:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Bagian tidak valid. Silakan kembali."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Kunci tidak valid. Silakan kembali."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Mencari pengaturan..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Pengaturan ini ditemukan. Silakan pilih satu."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Gagal menemukan pengaturan yang Anda minta."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6563,14 +6471,6 @@
       "text": "Tanggal dan waktu sederhana di tengah layar."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Migrasikan konfigurasi lama"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Memigrasikan beberapa konfigurasi lama Anda dari versi kernel yang lebih lama"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "Migrasi konfigurasi mungkin tidak berhasil diselesaikan. Jika Anda yakin bahwa file konfigurasi Anda valid, selidiki log debug untuk informasi lebih lanjut."
     },
@@ -6861,10 +6761,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Kernel dalam instance jarak jauh akan dimatikan"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Menggunakan gaya pengaturan lama"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7353,18 +7249,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Entri pengaturan tidak ditemukan."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Memeriksa pembaruan sistem (memerlukan koneksi Internet aktif)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Menunjukkan informasi sistem dasar (info selengkapnya tersedia dalam perintah 'sysinfo')."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Tidak bisa mendapatkan bagian"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8911,14 +8795,6 @@
       "text": "Pilih konfigurasi"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "Aplikasi pengaturan lama telah ditinggalkan dan akan dihapus dalam rilis mendatang."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Meminta Anda untuk memilih contoh konfigurasi"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Pilih contoh konfigurasi untuk beralih ke."
     },
@@ -9197,6 +9073,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Terjadi kesalahan Chatbot AI. Pastikan Anda memiliki koneksi internet, kunci API Anda valid, dan Anda tidak melebihi kuota API."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Memilih screensaver acak"
     }
   ]
 }
