--- a/public/Nitrocid.Base/Resources/Languages/nor.json
+++ b/public/Nitrocid.Base/Resources/Languages/nor.json
@@ -539,10 +539,6 @@
       "text": "Gå"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Spesifisert alternativ {0} er ugyldig."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Se etter oppdateringer ved oppstart"
     },
@@ -895,10 +891,6 @@
       "text": "Det angitte linjenummeret kan ikke være større enn det siste fillinjenummeret."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Trykk på hvilken som helst tast for å gå tilbake."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, opprettet i {1} {2}, endret i {3} {4}"
     },
@@ -1233,10 +1225,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Tegn slettet."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Velkommen til Innstillinger!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1781,14 +1769,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Spør etter et ord i en spesifisert linje eller alle linjer ved hjelp av regulære uttrykk"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Skriv hva du vil søke etter."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Ingenting er funnet. Kontroller at du har skrevet innstillingen riktig."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4087,84 +4067,12 @@
       "text": "Finner ikke innstillingstype."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Finn et alternativ"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Lar deg enkelt søke etter en innstillingsoppføring ved å bruke enten tittelen eller verdien."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Lagre innstillinger"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Lagrer kjernekonfigurasjonsendringene til konfigurasjonsfilen som finnes i programdatamappen."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Lagre innstillinger som"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Lagrer kjernekonfigurasjonsendringene til konfigurasjonsfilen som finnes i den angitte mappen."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Last inn innstillinger fra"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Laster inn kjernekonfigurasjonen fra den angitte konfigurasjonsfilen."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Last inn innstillinger på nytt"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Laster inn kjernekonfigurasjonen for eventuelle eksterne endringer"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Se etter systemoppdateringer"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Systeminformasjon"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Du er på landingssiden for {0}-innstillingene. Velg en seksjon eller et alternativ for å komme i gang. Avhengig av hvilke innstillinger du har endret, må du kanskje starte kjernen på nytt."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Laster inn delen..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "En eller flere av de følgende innstillingene i denne delen støttes ikke på plattformen din:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Ugyldig del. Vennligst gå tilbake."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Ugyldig nøkkel. Vennligst gå tilbake."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Søker etter innstillinger..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Disse innstillingene er funnet. Vennligst velg en."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Kunne ikke finne den forespurte innstillingen."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6567,14 +6475,6 @@
       "text": "Enkel dato og klokkeslett midt på skjermen."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Migrer gammel konfigurasjon"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Migrerer noe av din gamle konfigurasjon fra eldre versjoner av kjernen"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "Konfigurasjonsmigrering er kanskje ikke fullført. Hvis du er sikker på at konfigurasjonsfilene dine er gyldige, kan du undersøke feilsøkingsloggene for mer informasjon."
     },
@@ -6865,10 +6765,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Kjernen i den eksterne forekomsten vil bli stengt"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Bruker stilen for eldre innstillinger"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7357,18 +7253,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Finner ikke innstillingsoppføringer."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Sjekker etter systemoppdateringer (krever en aktiv Internett-tilkobling)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Viser grunnleggende systeminformasjon (mer informasjon er tilgjengelig i 'sysinfo'-kommandoen)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Får ikke seksjonen"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8915,14 +8799,6 @@
       "text": "Velg konfigurasjon"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "Den eldre innstillingsappen er avviklet og vil bli fjernet i en fremtidig utgivelse."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Ber deg velge en konfigurasjonsforekomst"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Velg en konfigurasjonsforekomst å bytte til."
     },
@@ -9201,6 +9077,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Det har oppstått en AI-feil i Chatbot. Sørg for at du har en Internett-tilkobling, at API-nøkkelen din er gyldig, og at du ikke overskrider API-kvoten din."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Velger en tilfeldig skjermsparer"
     }
   ]
 }
