--- a/public/Nitrocid.Base/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Base/Resources/Languages/rmn.json
@@ -536,10 +536,6 @@
       "text": "Ieșire"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Opțiunea specificată {0} este nevalidă."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Verificați actualizările la pornire"
     },
@@ -892,10 +888,6 @@
       "text": "Numărul de linie specificat nu poate fi mai mare decât numărul ultimului rând al fișierului."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Apăsați orice tastă pentru a reveni."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, creat în {1} {2}, modificat în {3} {4}"
     },
@@ -1230,10 +1222,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Personajul a fost șters."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Bun venit la Setări!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1778,14 +1766,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Interogează un cuvânt dintr-o linie specificată sau pe toate liniile folosind expresii regulate"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Scrie ce vrei să cauți."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Nu se găsește nimic. Asigurați-vă că ați scris corect setarea."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4084,84 +4064,12 @@
       "text": "Tipul de setări nu a fost găsit."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Găsiți o opțiune"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Vă permite să căutați cu ușurință o intrare de setări folosind fie titlul sau valoarea acesteia."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Salvează setările"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Salvează modificările configurației kernel-ului în fișierul de configurare găsit în folderul de date ale aplicației."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Salvați setările ca"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Salvează modificările configurației kernel-ului în fișierul de configurare găsit în folderul specificat."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Încărcați setările de la"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Încarcă configurația kernel-ului din fișierul de configurare specificat."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Reîncărcați setările"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Reîncarcă configurația kernel-ului pentru orice modificări externe"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Verificați actualizările de sistem"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Informatii despre sistem"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Sunteți pe pagina de destinație a setărilor {0}. Selectați o secțiune sau o opțiune pentru a începe. În funcție de setările pe care le-ați schimbat, poate fi necesar să reporniți nucleul."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Se încarcă secțiunea..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Una sau mai multe dintre următoarele setări găsite în această secțiune nu sunt acceptate pe platforma dvs.:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Secțiune nevalidă. Vă rugăm să vă întoarceți."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Cheie invalida. Vă rugăm să vă întoarceți."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Se caută setări..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Aceste setări sunt găsite. Vă rugăm selectați una."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Nu s-a găsit setarea solicitată."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6564,14 +6472,6 @@
       "text": "Data și ora simple în mijlocul ecranului."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Migrați configurația veche"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Migrează o parte din configurația dvs. veche din versiunile mai vechi ale nucleului"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "Este posibil ca migrarea configurației să nu fi fost finalizată cu succes. Dacă sunteți sigur că fișierele dvs. de configurare sunt valide, investigați jurnalele de depanare pentru mai multe informații."
     },
@@ -6862,10 +6762,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Nucleul din instanța de la distanță va fi oprit"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Utilizează stilul de setări vechi"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7354,18 +7250,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Intrările de setări nu sunt găsite."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Verifică actualizările de sistem (necesită o conexiune activă la Internet)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Vă arată informații de bază ale sistemului (mai multe informații sunt disponibile în comanda „sysinfo”)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Nu pot obține secțiunea"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8912,14 +8796,6 @@
       "text": "Selectați configurația"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "Vechea aplicație de setări a fost retrasă și va fi eliminată într-o versiune viitoare."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Vă solicită să selectați o instanță de configurare"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Selectați o instanță de configurare la care să comutați."
     },
@@ -9198,6 +9074,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "A apărut o eroare Chatbot AI. Asigurați-vă că aveți o conexiune la internet, cheia API este validă și că nu depășiți cota API."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Selectează un screensaver aleatoriu"
     }
   ]
 }
