--- a/public/Nitrocid.Base/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Base/Resources/Languages/vtn.json
@@ -535,10 +535,6 @@
       "text": "Ra"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_OPTIONINVALID",
-      "text": "Tùy chọn {0} được chỉ định là không hợp lệ."
-    },
-    {
       "loc": "NKS_SETTINGS_KERNEL_GENERAL_KERNELUPDATE_CHECKUPDATES_NAME",
       "text": "Kiểm tra Cập nhật khi Khởi động"
     },
@@ -891,10 +887,6 @@
       "text": "Số dòng được chỉ định không được lớn hơn số dòng của tệp cuối cùng."
     },
     {
-      "loc": "NKS_COMMON_GOBACK",
-      "text": "Nhấn phím bất kỳ để quay lại."
-    },
-    {
       "loc": "NKS_DRIVERS_FILESYSTEM_BASE_INFODATE",
       "text": "{0}, Được tạo vào {1} {2}, Được sửa đổi vào {3} {4}"
     },
@@ -1229,10 +1221,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_DELCHARNUM_SUCCESS",
       "text": "Ký tự đã bị xóa."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER",
-      "text": "Chào mừng đến với Cài đặt!"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_TESTDICTWRITERSTR_DESC",
@@ -1777,14 +1765,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_TEXT_COMMAND_QUERYWORDREGEX_DESC",
       "text": "Truy vấn một từ trong một dòng được chỉ định hoặc tất cả các dòng bằng cách sử dụng biểu thức chính quy"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHPROMPT",
-      "text": "Viết những gì bạn muốn tìm kiếm."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_NORESULTS",
-      "text": "Không tìm thấy gì. Hãy đảm bảo rằng bạn đã viết đúng cài đặt."
     },
     {
       "loc": "NKS_KERNEL_STARTING_WELCOMEMESSAGE_LICENSE2",
@@ -4083,84 +4063,12 @@
       "text": "Không tìm thấy loại cài đặt."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION",
-      "text": "Tìm một tùy chọn"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_FINDANOPTION_DESC",
-      "text": "Cho phép bạn dễ dàng tìm kiếm mục cài đặt bằng cách sử dụng tiêu đề hoặc giá trị của mục đó."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS",
-      "text": "Lưu cài đặt"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVESETTINGS_DESC",
-      "text": "Lưu các thay đổi cấu hình hạt nhân của bạn vào tệp cấu hình nằm trong thư mục dữ liệu ứng dụng."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS",
-      "text": "Lưu cài đặt dưới dạng"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVEAS_DESC",
-      "text": "Lưu các thay đổi cấu hình hạt nhân của bạn vào tệp cấu hình được tìm thấy trong thư mục đã chỉ định."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM",
-      "text": "Tải cài đặt từ"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADFROM_DESC",
-      "text": "Tải cấu hình hạt nhân từ tệp cấu hình đã chỉ định."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD",
-      "text": "Tải lại cài đặt"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_RELOAD_DESC",
-      "text": "Tải lại cấu hình hạt nhân cho bất kỳ thay đổi bên ngoài nào"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES",
       "text": "Kiểm tra cập nhật hệ thống"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO",
       "text": "Thông tin hệ thống"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_HEADER_LANDING",
-      "text": "Bạn đang ở trang đích của cài đặt {0}. Chọn một phần hoặc tùy chọn để bắt đầu. Tùy thuộc vào cài đặt bạn đã thay đổi, bạn có thể cần khởi động lại hạt nhân."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LOADINGSECTION",
-      "text": "Đang tải phần..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_UNSUPPORTEDCONFIG",
-      "text": "Một hoặc nhiều cài đặt sau đây có trong phần này không được hỗ trợ trên nền tảng của bạn:"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDSECTION",
-      "text": "Phần không hợp lệ. Vui lòng quay lại."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_INVALIDKEY",
-      "text": "Khóa không hợp lệ. Vui lòng quay lại."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHING",
-      "text": "Đang tìm kiếm cài đặt..."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFOUND",
-      "text": "Đã tìm thấy các thiết lập này. Vui lòng chọn một."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SEARCHFAILURE",
-      "text": "Không tìm thấy cài đặt bạn yêu cầu."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SAVINGSETTINGS",
@@ -6563,14 +6471,6 @@
       "text": "Ngày và giờ đơn giản ở giữa màn hình."
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG",
-      "text": "Di chuyển cấu hình cũ"
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_DESC",
-      "text": "Di chuyển một số cấu hình cũ của bạn từ các phiên bản cũ hơn của hạt nhân"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_MIGRATEOLDCONFIG_SUCCESS",
       "text": "Có thể quá trình di chuyển cấu hình chưa hoàn tất thành công. Nếu bạn chắc chắn rằng các tệp cấu hình của mình hợp lệ, hãy kiểm tra nhật ký gỡ lỗi để biết thêm thông tin."
     },
@@ -6861,10 +6761,6 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_RSHUTDOWN_DESC",
       "text": "Hạt nhân trong phiên bản từ xa sẽ bị tắt"
-    },
-    {
-      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SETTINGS_SWITCH_SEL_DESC",
-      "text": "Sử dụng kiểu cài đặt cũ"
     },
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SHOWNOTIFS_SWITCH_TUI_DESC",
@@ -7353,18 +7249,6 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_ENTRIESNOTFOUND",
       "text": "Không tìm thấy mục cài đặt."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_CHECKUPDATES_DESC",
-      "text": "Kiểm tra bản cập nhật hệ thống (yêu cầu kết nối Internet đang hoạt động)."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SYSINFO_DESC",
-      "text": "Hiển thị thông tin hệ thống cơ bản (thông tin chi tiết hơn có trong lệnh 'sysinfo')."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_EXCEPTION_CANTGETSECTION",
-      "text": "Không thể lấy được phần"
     },
     {
       "loc": "NKS_KERNEL_DEBUGGING_REMOTEDEBUG_EXCEPTION_MAYBEUNEXPECTEDLYDISCONNECTED",
@@ -8911,14 +8795,6 @@
       "text": "Chọn cấu hình"
     },
     {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYSHUTDOWN",
-      "text": "Ứng dụng cài đặt cũ đã không còn được sử dụng nữa và sẽ bị xóa trong bản phát hành trong tương lai."
-    },
-    {
-      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_DESC",
-      "text": "Nhắc bạn chọn một phiên bản cấu hình"
-    },
-    {
       "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_SELECTCONFIG_SELECT",
       "text": "Chọn một phiên bản cấu hình để chuyển sang."
     },
@@ -9197,6 +9073,10 @@
     {
       "loc": "NKS_KERNEL_EXCEPTIONS_MESSAGE_CHATBOTAI",
       "text": "Đã xảy ra lỗi Chatbot AI. Vui lòng đảm bảo bạn có kết nối Internet, khóa API hợp lệ và không vượt quá hạn mức API."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Chọn một trình bảo vệ màn hình ngẫu nhiên"
     }
   ]
 }
